[package]
name = "arvidkr-chess-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
caspervk-chess = { git = "https://github.com/INDA24PlusPlus/caspervk-chess" }
bevy = "0.14"
chess-networking = { git = "https://github.com/INDA24PlusPlus/chess-networking.git" }
serde = "1.0.136"
serde_derive = "1.0.210"
rmp-serde = "1.3.0"
